--- a/src/Snebur.VisualStudio2022/Snebur.VisualStudio2022.csproj
+++ b/src/Snebur.VisualStudio2022/Snebur.VisualStudio2022.csproj
@@ -121,6 +121,7 @@
     <Compile Include="ToolWindows\Output\OutputWindowControl.xaml.cs">
       <DependentUpon>OutputWindowControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ToolWindows\Output\TsNewStringFormatUtil.cs" />
     <Compile Include="Utilidade\Ex\AjudanteAssemblyEx.cs" />
     <Compile Include="Utilidade\LogVS.cs" />
     <Compile Include="Utilidade\ProjetoDteUtil.cs" />
