--- a/src/Snebur.VisualStudio.Compartilhado/Snebur.VisualStudio.Compartilhado.csproj
+++ b/src/Snebur.VisualStudio.Compartilhado/Snebur.VisualStudio.Compartilhado.csproj
@@ -9,6 +9,12 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="Resources\Modelos\AtributoPartial.ts" />
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Include="Resources\Modelos\AtributoPartial.ts" />
+	</ItemGroup>
+	<ItemGroup>
 	  <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
 	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	</ItemGroup>
